SERVER-41270 Split batch after beginApplyingTimestamp in initial syncer.