src/mongo/db/repl/initial_syncer.cpp
@@ -1687,6 +1687,11 @@ StatusWith<Operations> InitialSyncer::_getNextApplierBatch_inlock() {
     OplogApplier::BatchLimits batchLimits;
     batchLimits.bytes = replBatchLimitBytes.load();
     batchLimits.ops = OplogApplier::getBatchLimitOperations();
+    // We want a batch boundary after the beginApplyingTimestamp, to make sure all oplog entries
+    // that are part of a transaction before that timestamp are written out before we start applying
+    // entries after them.  This is because later entries may be commit or prepare and thus
+    // expect to read the partial entries from the oplog.
+    batchLimits.forceBatchBoundaryAfter = _initialSyncState->beginApplyingTimestamp;
     return _oplogApplier->getNextApplierBatch(opCtx.get(), batchLimits);
 }
 
