src/mongo/db/repl/oplog_applier.h
@@ -92,6 +92,10 @@ public:
         // This is intended for implementing slaveDelay, so it should be some number of seconds
         // before now.
         boost::optional<Date_t> slaveDelayLatestTimestamp = {};
+
+        // If non-null, the batch will include operations with timestamps either
+        // before-and-including this point or after it, not both.
+        Timestamp forceBatchBoundaryAfter;
     };
 
     // Used to report oplog application progress.
